@@ -27,6 +27,7 @@
  + New atlas format: AlpineQuestMap (AQM)
  + New atlas format: Ublox
  ! Fixed OSM Hiking relief
+ + New map source: Cykloatlas with relief
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
